--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Emma Collins # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/profilepic.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Test One
   <br><br>
