--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Emma Collins # your name (or website title) here
+title: Emma M Collins # your name (or website title) here
 logo: "/images/profile_pic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Test One
