--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Emma M Collins # your name (or website title) here
 logo: "/images/profile_pic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Test One
+  Recent MS, Satistics graduate looking for a junior data scientist position at a data-driven company in the Denver Metro area.
   <br><br>
-  Test Two 
+  I love discovering what unexpected information data can hold and coaxing it out with various statistical and mathematical techniques.  
+  Not only do I have a passion for data, but I excel and enjoy communicating my ideas and strategies to diverse audiences.
   <br><br>
   <a href="https://www.linkedin.com/in/emma-m-collins/">View My LinkedIn Profile</a> 
   
