--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I love discovering what unexpected information data can hold and coaxing it out with various statistical and mathematical techniques.  
   Not only do I have a passion for data, but I excel and enjoy communicating my ideas and strategies to diverse audiences.
+  I strive to be a lifelong learner and learn as much as I can in multiple disciplines and areas of study.
   <br><br>
   <a href="https://www.linkedin.com/in/emma-m-collins/">View My LinkedIn Profile</a> 
   
