--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ logo: "/images/profile_pic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Recent MS, Satistics graduate looking for a junior data scientist position at a data-driven company in the Denver Metro area.
   <br><br>
-  I love discovering what unexpected information data can hold and coaxing it out with various statistical and mathematical techniques.  
-  Not only do I have a passion for data, but I excel and enjoy communicating my ideas and strategies to diverse audiences.
-  I strive to be a lifelong learner and learn as much as I can in multiple disciplines and areas of study.
+  When not data-crunching, you can find me paddle boarding or baking.
   <br><br>
   <a href="https://www.linkedin.com/in/emma-m-collins/">View My LinkedIn Profile</a> 
   
