--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Emma M Collins # your name (or website title) here
-logo: "/images/profile_pic.png" # your photo (or logo) here
+logo: "/images/headshot.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Recent MS, Satistics graduate looking for a junior data scientist position at a data-driven company in the Denver Metro area.
   <br><br>
