--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Emma M Collins # your name (or website title) here
 logo: "/images/headshot.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Recent MS, Satistics graduate looking for a junior data scientist position at a data-driven company in the Denver Metro area.
+  Marketing Data Scientiest for a financial services company in the Denver Metro area.
   <br><br>
   <a href="https://www.linkedin.com/in/emma-m-collins/">View My LinkedIn Profile</a> 
   <br>
