--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Emma M Collins # your name (or website title) here
-logo: "/images/headshot.png" # your photo (or logo) here
+logo: "/images/headshot.png.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Marketing Data Scientiest for a financial services company in the Denver Metro area.
   <br><br>
